kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haystack-rag
  labels:
    app.kubernetes.io/name: haystack-rag
    app.kubernetes.io/instance: haystack-rag
spec:
  ingressClassName: traefik
  rules:
  - host: "example.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haystack-rag-gateway-api-gw
            port:
              number: 8080
